--- a/steps/springboot/package/commands.yaml
+++ b/steps/springboot/package/commands.yaml
@@ -1,5 +1,56 @@
 commands:
-  - name: "Azure: package"
-    description: "we carry out the project package"
-    cmd: "pwd"
-    dir: "."
+  - name: "verificar herramientas"
+    description: "Verificar que Maven, Docker y Azure CLI estén instalados"
+    cmd: "mvn --version && docker --version && az --version"
+    workdir: "."
+    
+  - name: "login Azure"
+    description: "Autenticarse en Azure CLI"
+    cmd: "az login --use-device-code || az login --identity || az login"
+    workdir: "."
+
+  - name: "configurar suscripción"
+    description: "Configurar la suscripción de trabajo si es necesario"
+    cmd: "az account set --subscription ${var.subscription_id}"
+    workdir: "."
+
+  - name: "verificar contexto Azure"
+    description: "Verificar suscripción y contexto actual"
+    cmd: "az account show --output table"
+    workdir: "."
+    
+  - name: "login ACR específico"
+    description: "Autenticarse específicamente en el Container Registry"
+    cmd: "az acr login --name ${var.container_registry_name}"
+    workdir: "."
+
+  - name: "terraform Init"
+    description: "Inicializar Terraform para package"
+    cmd: "terraform init"
+    workdir: "./terraform"
+    
+  - name: "terraform Plan"
+    description: "Planificar el despliegue del package"
+    cmd: "terraform plan -var=\"project_source_path=${var.project_source_path}\" -var=\"project_version=${var.project_version}\" -var=\"project_name=${var.project_name}\" -var=\"dockerfile_path=${var.git_local_path}/package/docker/Dockerfile\" -var=\"resource_group_name=${var.resource_group_name}\" -var=\"container_registry_name=${var.container_registry_name}\" -var=\"subscription_id=${var.subscription_id}\" -var=\"environment=${var.environment}\" -out plan.out"
+    workdir: "./terraform"
+    
+  - name: "terraform Apply"
+    description: "Ejecutar el empaquetado y push al ACR"
+    cmd: "terraform apply 'plan.out'"
+    workdir: "./terraform"
+    
+  - name: "Escaneo de seguridad con Trivy"
+    description: "Escanear vulnerabilidades en la imagen Docker"
+    cmd: "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${var.container_registry_login_server}/${var.project_name}:${var.project_version}"
+    workdir: "."
+    continue_on_error: true
+
+  - name: "Verificar imagen en ACR"
+    description: "Listar imágenes en el ACR para verificar el push"
+    cmd: "az acr repository show-tags --name ${var.container_registry_name} --repository ${var.project_name} --output table --orderby time_desc --top 3"
+    workdir: "."
+    
+  - name: "Limpiar imágenes locales"
+    description: "Limpiar imágenes Docker locales para ahorrar espacio"
+    cmd: "docker system prune -f"
+    workdir: "."
