feat(deploy): creacion de manifests basicos de kubernetes

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/linux,windows,macos,terraform
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,windows,macos,terraform
 
+.idea
+.vscode
+.env
 ### Linux ###
 *~
 
