--- a/steps/springboot/package/terraform/terraform.tfvars.sample
+++ b/steps/springboot/package/terraform/terraform.tfvars.sample
@@ -1,4 +1,5 @@
-subscription_id = "id de la suscripcion"
-resource_group_name = "nombre del recurso"
-container_registry_name = "nombre del ACR"
-project_name = "nombre del proyecto"
+azure_resource_group_name = "Define el nombre del Resource Group de Azure donde se encuentra alojado el Container Registry"
+azure_container_registry_name = "Define el nombre del Azure Container Registry utilizado para almacenar las imágenes Docke"
+docker_dockerfile_path = "Define la ruta del archivo Dockerfile utilizado para la construcción de la imagen"
+app_project_name = "Define el nombre del proyecto que se utilizará para nombrar la imagen Docker"
+app_project_source_path = Define la ruta del directorio que contiene el código fuente de la aplicación
