--- a/steps/springboot/supply/commands.yaml
+++ b/steps/springboot/supply/commands.yaml
@@ -1,58 +1,81 @@
 commands:
 
-  - name: "Verificar herramientas"
-    description: "Verificar que Terraform, Azure CLI y kubectl estén instalados"
-    cmd: "terraform --version && az --version && kubectl version --client && kubelogin --version"
-    workdir: "."
+  - name: "Verificar terraform"
+    description: "verifica que terraform esté instalado"
+    cmd: "terraform --version"
+    result: '(?m)^Terraform\s+v\d+\.\d+\.\d+$'
+
+  - name: "Verificar kubectl"
+    description: "verifica que kubectl esté instalado"
+    cmd: "kubectl version --client"
+    result: '(?m)^Client Version:\s+v\d+\.\d+\.\d+$'
+
+  - name: "Verificar kubelogin"
+    description: "verifica que kubelogin esté instalado"
+    cmd: "kubelogin --version"
+    result: '(?m)^kubelogin version'
+
+  - name: "Verificar Azure CLI"
+    description: "verifica que Azure CLI esté instalado"
+    cmd: "az --version"
+    result: '(?m)^azure-cli\s+\d+\.\d+\.\d+'
     
-  - name: "Login Azure"
-    description: "Autenticarse en Azure CLI"
-    cmd: "az login --use-device-code || az login --identity || az login"
-    workdir: "."
+  - name: "Iniciar sesión"
+    description: "Permite autenticarse en Azure CLI y obtener un token de acceso valido"
+    cmd: "az login"
     
-  - name: "terraform apply bootstrap"
-    description: "we carry out the project supply bootstrap"
+  #- name: "terraform apply bootstrap"
+    #description: "we carry out the project supply bootstrap"
     #cmd: "terraform init && terraform plan -out plan.out && terraform apply 'plan.out'"
-    cmd: "pwd"
-    workdir: "./terraform/bootstrap"
+    #cmd: "pwd"
+    #workdir: "./terraform/bootstrap"
     
-  - name: "terraform init"
-    description: "we carry out the project supply"
+  - name: "Iniciar terraform"
+    description: "prepara el entorno de trabajo de terraform, descargando los proveedores y configurando el backend de estado"
     cmd: "terraform init"
     #cmd: "terraform init -backend-config='backend.tfvars'"
-    #cmd: "pwd"
     workdir: "./terraform"
 
-  - name: "terraform plan"
-    description: "we carry out the project supply"
-    cmd: "terraform plan -out plan.out"
-    #cmd: "pwd"
+  - name: "Planificar terraform"
+    description: "genera un plan de ejecución mostrando los cambios que se aplicarán en la infraestructura"
+    cmd: "terraform plan -var=\"app_project_nam=${var.project_name}\" -var=\"app_team_name=${var.project_team}\" -var=\"azure_environment=${var.environment}\" -out plan.out"
     workdir: "./terraform"
 
-  - name: "terraform apply"
-    description: "we carry out the project supply"
+  - name: "Aplicar terraform"
+    description: "ejecuta los cambios definidos en el plan para aprovisionar o modificar la infraestructura"
     cmd: "terraform apply 'plan.out'"
-    #cmd: "pwd"
     workdir: "./terraform"
-    outputs:
 
-      - name: "resource_group_name"
-        description: "nombre del recurso"
-        regex: resource_group_name\s*=\s*"([^"]+)"
+    variables:
+      - name: "azure_resource_group_name"
+        description: "Devuelve el nombre del grupo de recursos creado en Azure"
+        regex: azure_resource_group_name\s*=\s*"([^"]+)"
 
-      - name: "kubernetes_cluster_name"
-        description: "nombre del recurso"
-        regex: kubernetes_cluster_name\s*=\s*"([^"]+)"
+      # creo no se usa
+      - name: "azure_kubernetes_cluster_name"
+        description: "Devuelve el nombre del cluster de Azure Kubernetes Service (AKS) creado"
+        regex: azure_kubernetes_cluster_name\s*=\s*"([^"]+)"
 
-      - name: "container_registry_name"
-        description: "nombre del recurso"
-        regex: container_registry_name\s*=\s*"([^"]+)"
+      - name: "azure_container_registry_name"
+        description: "Devuelve el nombre del Azure Container Registry (ACR) creado para almacenar imágenes de contenedores"
+        regex: azure_container_registry_name\s*=\s*"([^"]+)"
 
-      - name: "container_registry_login_server"
-        description: "nombre del recurso"
-        regex: container_registry_login_server\s*=\s*"([^"]+)"
+      - name: "azure_container_registry_login_server"
+        description: "Devuelve el dominio del servidor de inicio de sesión del Azure Container Registry"
+        regex: azure_container_registry_login_server\s*=\s*"([^"]+)"
 
-  - name: "Azure get credentials"
-    description: "we get the credentials aks for the project"
-    cmd: "az aks get-credentials -g ${var.resource_group_name} -n ${var.kubernetes_cluster_name}"
-    #cmd: "pwd"
+      - name: "azure_subscription_id"
+        description: "Devuelve el identificador único de la suscripción de Azure utilizado"
+        regex: azure_subscription_id\s*=\s*([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12})"
+
+      - name: "azure_kubernetes_cluster_fqdn"
+        description: "Devuelve el FQDN del cluster AKS para usar como base del ingress_host"
+        regex: azure_kubernetes_cluster_fqdn\s*=\s*"([^"]+)"
+
+#  - name: "Azure get credentials"
+#    description: "we get the credentials aks for the project"
+#    cmd: "az aks get-credentials -g ${var.resource_group_name} -n ${var.kubernetes_cluster_name} --overwrite-existing"
+#
+#  - name: "kubelogin convert-kubeconfig"
+#    description: "we convert the credentials aks for the project"
+#    cmd: "kubelogin convert-kubeconfig -l azurecli"
