--- a/variables/sand/deploy.yaml
+++ b/variables/sand/deploy.yaml
@@ -136,3 +136,19 @@
 - name: "k8s_quota_storage"
   description: "total storage requests allowed in namespace"
   value: "5Gi"
+
+- name: "k8s_project_instance"
+  description: "nombre base de Kubernetes compuesto por el nombre, id y ambiente del proyecto"
+  value: ${var.project_name}${var.project_id}-${var.environment}
+
+- name: "k8s_namespace"
+  description: "namespace de Kubernetes compuesto por el nombre del proyecto y el equipo"
+  value: ${var.k8s_project_instance}-${var.project_team}
+
+- name: "k8s_deployment_name"
+  description: "nombre del deployment de Kubernetes"
+  value: ${var.k8s_project_instance}-${var.technology_type}
+
+- name: "k8s_ingress_host"
+  description: "host domain for the ingress (FQDN of the AKS cluster)"
+  value: "${var.azure_kubernetes_cluster_fqdn}"
