--- a/steps/02-supply/terraform/terraform.tfvars.sample
+++ b/steps/02-supply/terraform/terraform.tfvars.sample
@@ -1,1 +1,4 @@
-subscription_id = "id de la suscripcion"
+app_environment = "${var.environment}"
+app_project_name = "${var.project_name}"
+app_team_name = "${var.project_team}"
+azure_subscription_id = "${var.azure_subscription_id}"
