--- a/steps/03-package/terraform/terraform.tfvars.sample
+++ b/steps/03-package/terraform/terraform.tfvars.sample
@@ -1,5 +1,8 @@
-azure_resource_group_name = "Define el nombre del Resource Group de Azure donde se encuentra alojado el Container Registry"
-azure_container_registry_name = "Define el nombre del Azure Container Registry utilizado para almacenar las imágenes Docke"
-docker_dockerfile_path = "Define la ruta del archivo Dockerfile utilizado para la construcción de la imagen"
-app_project_name = "Define el nombre del proyecto que se utilizará para nombrar la imagen Docker"
-app_project_source_path = Define la ruta del directorio que contiene el código fuente de la aplicación
+app_environment = "${var.environment}"
+app_project_source_path = "${var.project_workdir}"
+app_project_name = "${var.project_name}"
+app_project_version = "${var.project_version}"
+azure_subscription_id = "${var.azure_subscription_id}"
+azure_resource_group_name = "${var.azure_resource_group_name}"
+azure_container_registry_name = "${var.azure_container_registry_name}"
+docker_dockerfile_path = "${var.step_workdir}/docker/Dockerfile"
