--- a/steps/04-deploy/k8s/deployment.yaml
+++ b/steps/04-deploy/k8s/deployment.yaml
@@ -4,11 +4,11 @@ metadata:
   name: ${var.k8s_deployment_name}
   namespace: ${var.k8s_namespace}
   labels:
-    app.kubernetes.io/name: ${var.project_name12}
+    app.kubernetes.io/name: ${var.project_name}
     app.kubernetes.io/instance: ${var.k8s_project_instance}
     app.kubernetes.io/version: ${var.project_version}
-    app.kubernetes.io/part-of: ${var.project_organization}
-    app.kubernetes.io/managed-by: ${var.KeyToolName}
+    app.kubernetes.io/part-of: ${var.product_organization}
+    app.kubernetes.io/managed-by: ${var.tool_name}
     environment: ${var.environment}
 
 spec:
@@ -21,14 +21,14 @@ spec:
       maxSurge: ${var.k8s_max_surge}
   selector:
     matchLabels:
-      app.kubernetes.io/name: ${var.project_name12}
-      app.kubernetes.io/part-of: ${var.project_organization}
+      app.kubernetes.io/name: ${var.project_name}
+      app.kubernetes.io/part-of: ${var.product_organization}
       environment: ${var.environment}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: ${var.project_name12}
-        app.kubernetes.io/part-of: ${var.project_organization}
+        app.kubernetes.io/name: ${var.project_name}
+        app.kubernetes.io/part-of: ${var.product_organization}
         environment: ${var.environment}
     spec:
       containers:
@@ -45,7 +45,7 @@ spec:
             cpu: "${var.k8s_cpu_limit}"
         livenessProbe:
           httpGet:
-            path: /actuator/health
+            path: /actuator/health/liveness
             port: ${var.container_port}
           initialDelaySeconds: ${var.k8s_initial_liveness}
           periodSeconds: ${var.k8s_period_liveness}
