fix(app): se trabaja la version con el hash de git

--- a/steps/03-package/terraform/terraform.tfvars.sample
+++ b/steps/03-package/terraform/terraform.tfvars.sample
@@ -2,6 +2,7 @@ app_environment = "${var.environment}"
 app_project_source_path = "${var.project_workdir}"
 app_project_name = "${var.project_name}"
 app_project_version = "${var.project_version}"
+app_project_revision = "${var.project_revision}"
 azure_subscription_id = "${var.azure_subscription_id}"
 azure_resource_group_name = "${var.azure_resource_group_name}"
 azure_container_registry_name = "${var.azure_container_registry_name}"
