--- a/steps/04-deploy/k8s/deployment.yaml
+++ b/steps/04-deploy/k8s/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ${var.project_name}
     app.kubernetes.io/instance: ${var.k8s_project_instance}
-    app.kubernetes.io/version: ${var.project_version}
+    app.kubernetes.io/version: "${var.project_revision}"
     app.kubernetes.io/part-of: ${var.product_organization}
     app.kubernetes.io/managed-by: ${var.tool_name}
     environment: ${var.environment}
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: ${var.k8s_deployment_name}
-        image: ${var.azure_container_registry_login_server}/${var.project_name}:${var.project_version}
+        image: ${var.azure_container_registry_login_server}/${var.project_name}:${var.project_revision}
         ports:
         - containerPort: ${var.container_port}
         resources:
