--- a/steps/04-deploy/k8s/deployment.yaml
+++ b/steps/04-deploy/k8s/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/name: ${var.project_name}
     app.kubernetes.io/instance: ${var.k8s_project_instance}
     app.kubernetes.io/version: "${var.project_revision}"
-    app.kubernetes.io/part-of: ${var.product_organization}
+    app.kubernetes.io/part-of: ${var.project_organization}
     app.kubernetes.io/managed-by: ${var.tool_name}
     environment: ${var.environment}
 
@@ -22,13 +22,13 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: ${var.project_name}
-      app.kubernetes.io/part-of: ${var.product_organization}
+      app.kubernetes.io/part-of: ${var.project_organization}
       environment: ${var.environment}
   template:
     metadata:
       labels:
         app.kubernetes.io/name: ${var.project_name}
-        app.kubernetes.io/part-of: ${var.product_organization}
+        app.kubernetes.io/part-of: ${var.project_organization}
         environment: ${var.environment}
     spec:
       containers:
