--- a/steps/03-package/commands.yaml
+++ b/steps/03-package/commands.yaml
@@ -1,23 +1,23 @@
-- name: "Construir imagen Docker"
-  description: "Construye la imagen Docker con múltiples etiquetas: versión, latest y revisión."
+- name: "Build Docker image"
+  description: "Build the Docker image with multiple tags: version, latest and revision."
   cmd: "docker build -t ${var.azure_container_registry_login_server}/${var.project_name}:${var.project_revision} -t ${var.azure_container_registry_login_server}/${var.project_name}:latest -t ${var.project_name}:${var.project_revision} -f ${var.step_workdir}/docker/Dockerfile ${var.project_workdir}"
    
-- name: "Iniciar sesion con Azure CLI"
-  description: "Configurar inicio de sesion"
+- name: "Login to Azure CLI"
+  description: "Configure login to Azure CLI"
   cmd: "az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID"
 
-- name: "Iniciar sesión en ACR"
-  description: "Autentica en Azure Container Registry reutilizando credenciales de sesión activa"
+- name: "Login to ACR"
+  description: "Authenticate to Azure Container Registry reusing active session credentials"
   cmd: "az acr login --name ${var.azure_container_registry_name}"
 
-- name: "Subir imagen a ACR (por versión)"
-  description: "Sube la imagen con la etiqueta de la versión del proyecto a Azure Container Registry."
+- name: "Upload image to ACR (by version)"
+  description: "Upload the image with the version tag of the project to Azure Container Registry."
   cmd: "docker push ${var.azure_container_registry_login_server}/${var.project_name}:${var.project_revision}"
 
-- name: "Subir imagen a ACR (latest)"
-  description: "Sube la imagen con la etiqueta 'latest' a Azure Container Registry."
+- name: "Upload image to ACR (latest)"
+  description: "Upload the image with the 'latest' tag to Azure Container Registry."
   cmd: "docker push ${var.azure_container_registry_login_server}/${var.project_name}:latest"
 
-- name: "Limpiar imágenes locales"
-  description: "elimina imágenes Docker locales huérfanas para optimizar el uso de espacio en disco"
+- name: "Clean local images"
+  description: "remove orphaned Docker images to optimize disk space usage"
   cmd: "docker system prune -f"
